--- a/style.css
+++ b/style.css
@@ -97,16 +97,22 @@ input, select {
 
 
 
+body {
+    background-color: #d7e5b5;
+}
+
 .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 20px;
+    font-family: "Muli";
 }
 
 .buttons {
     display: grid;
     grid-template-columns: 80px 80px 80px 80px;
-    grid-template-rows: 70px 70px 70px 70px 70px;
+    grid-template-rows: 50px 50px 50px 50px 50px;
     margin: 0 auto;
 }
 
@@ -114,11 +120,22 @@ input, select {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.3px solid #000;
 }
 
 .show {
     margin: 0 auto;
+    margin-top: 100px;
+    width: 320px;
+    height: 50px;
+    background-color: #67696b;
+    border-bottom: none;
+    text-align: right;
+}
+
+#show {
+    margin-right: 5px;
+    margin-top: 20px;
+    color: #fff;
 }
 
 #clear {
@@ -129,4 +146,20 @@ input, select {
 #del {
     grid-column-start: 3;
     grid-column-end: 5;
+}
+
+#zero, #one, #two, #three, #four, #five, #six, #seven, #eight, #nine {
+    background-color: #a2cef9;
+}
+
+#minus, #plus, #times, #division, #equals, #dot {
+    background-color: #eda35e;
+}
+
+#clear {
+    background-color: #a7acaf;
+}
+
+#del {
+    background-color: #c5c7c9;
 }
