--- a/style.css
+++ b/style.css
@@ -163,3 +163,18 @@ body {
 #del {
     background-color: #c5c7c9;
 }
+
+.bluebuttons:hover {
+    border: 2px solid #274f8e;
+    cursor: pointer;
+}
+
+.orangebuttons:hover {
+    border: 2px solid #f78616;
+    cursor: pointer;
+}
+
+.greybuttons:hover {
+    border: 2px solid #514e4b;
+    cursor: pointer;
+}
